# ToDoTracker

./: .gitignore  README.md  alembic.ini  pyproject.toml  repository.yaml
.claude/: settings.local.json
.github/workflows/: build-addon.yml
alembic/: env.py
alembic/versions/: 001_initial.py
frontend/: index.html
frontend/static/: app.js  style.css
hassio/: CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml
hassio/rootfs/etc/services.d/todotracker/: finish  run
hassio/translations/: en.yaml
src/todotracker/: __init__.py  cli.py  config.py  database.py  main.py
src/todotracker/api/: __init__.py  attachments.py  auth.py  categories.py  priorities.py  routes.py  tags.py  todos.py
src/todotracker/models/: __init__.py  attachment.py  base.py  category.py  priority.py  tag.py  todo.py
src/todotracker/schemas/: __init__.py  attachment.py  base.py  category.py  priority.py  tag.py  todo.py
src/todotracker/services/: __init__.py  cache.py  file_service.py  todo_service.py
tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_services.py
