[project]
name = "todotracker"
version = "0.1.0"
description = "A task manager that lets you spend less time setting up and more time doing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.9.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[project.scripts]
todo = "todotracker.cli:app"
todotracker-server = "todotracker.main:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todotracker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
